Made a change in the font family

--- a/index (1).html
+++ b/index (1).html
@@ -5,10 +5,10 @@
     <style>
       *{
         text-align:center;
-        font-family:fantasy;
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
       }
       #text{
-        text-shadow:2px 2px 2px yellow;
+        text-shadow:2px 2px 2px orangered;
       }
       #box{
         box-shadow:10px 5px 3px red;
